@@ -42,6 +42,11 @@ Changes in Runtime Behavior
   structure of composite and leaf readers.  (Adrien Grand,
   Uwe Schindler)
 
+Build
+
+* LUCENE-6518: Don't report false thread leaks from IBM J9
+  ClassCache Reaper in test framework. (Dawid Weiss)
+
 ======================= Lucene 5.2.0 =======================
 
 New Features
